# SwitchMaster

./: .gitignore  .gitmodules  CMakeLists.txt  PEM_SwitchMaster_SecureBoot_Key  README.md  mlt-sw-v2-partitions.csv  sdkconfig.defaults
Flashing_Scripts/: SMv2_SBv2_signing_key.pem  burn_FE.bat  burn_SB2.bat  encrypt_and_flash.bat  encrypt_only.bat  flash_only.bat  sef.bat
main/: CMakeLists.txt  main.cpp
main/mlt_inc/: mlt_adc.h  mlt_calibration.h  mlt_config.h  mlt_defs.h  mlt_eeprom.h  mlt_led.h  mlt_monitor.h  mlt_nimble.h  mlt_nvs.h  mlt_output.h  mlt_temp.h  mlt_usb.h  mlt_web.h
main/mlt_src/: mlt_adc.cpp  mlt_calibration.cpp  mlt_config.cpp  mlt_eeprom.cpp  mlt_led.cpp  mlt_monitor.cpp  mlt_nimble.cpp  mlt_nvs.cpp  mlt_output.cpp  mlt_temp.cpp  mlt_usb.cpp  mlt_web.cpp
patches/: arduino_lib.patch
