idf_component_register( SRCS "main.cpp"
                             "mlt_src/mlt_adc.cpp"
							 "mlt_src/mlt_calibration.cpp"
							 "mlt_src/mlt_config.cpp"
							 "mlt_src/mlt_eeprom.cpp"
							 "mlt_src/mlt_led.cpp"
							 "mlt_src/mlt_monitor.cpp"
							 "mlt_src/mlt_nimble.cpp"
							 "mlt_src/mlt_nvs.cpp"
							 "mlt_src/mlt_output.cpp"
							 "mlt_src/mlt_temp.cpp"
							 "mlt_src/mlt_usb.cpp"
							 "mlt_src/mlt_web.cpp"
                        INCLUDE_DIRS ""
                                     "mlt_inc" )
